projects/elevate/elevate-auth-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elevate-auth-svc
  labels:
    app: elevate-auth
spec:
  ports:
    - name: http
      port: 7015
      protocol: TCP
      targetPort: 7015
  selector:
    app: elevate-auth
